Inclusão do JWT

--- a/CleanArchMvc.API/appsettings.Development.json
+++ b/CleanArchMvc.API/appsettings.Development.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=localhost;Initial Catalog=CleanArchDB1;Persist Security Info=True;User ID=sa; Password=sql2022@"
   },
+  "Jwt": {
+    "SecretKey": "#^B8l&L*yVkBazf4ZhOrWyOuixVl5lf%#D",
+    "Issuer": "alveselton",
+    "Audience":  "http://www.codehead.com.br"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
